@@ -6,53 +6,46 @@
 
 package com.digitalasset.quickstart.service;
 
+import static com.digitalasset.quickstart.service.ServiceUtils.ensurePresent;
+import static com.digitalasset.quickstart.service.ServiceUtils.traceServiceCallAsync;
+import static com.digitalasset.quickstart.utility.TracingUtils.tracingCtx;
+import static com.digitalasset.quickstart.utility.Utils.*;
+
 import com.daml.ledger.api.v2.CommandsOuterClass;
 import com.daml.ledger.api.v2.ValueOuterClass;
 import com.digitalasset.quickstart.api.LicensesApi;
 import com.digitalasset.quickstart.ledger.LedgerApi;
-import com.digitalasset.quickstart.ledger.ScanProxy;
-import com.digitalasset.quickstart.pqs.Contract;
+import com.digitalasset.quickstart.ledger.TokenStandardProxy;
 import com.digitalasset.quickstart.repository.DamlRepository;
-import com.digitalasset.quickstart.repository.DamlRepository.LicenseRenewalRequestData;
-import com.digitalasset.quickstart.security.AuthenticatedPartyProvider;
-import com.digitalasset.quickstart.utility.LoggingSpanHelper;
+import com.digitalasset.quickstart.security.AuthUtils;
+import com.digitalasset.quickstart.tokenstandard.openapi.allocation.model.DisclosedContract;
 import com.digitalasset.transcode.java.ContractId;
 import com.digitalasset.transcode.java.Party;
 import com.google.protobuf.ByteString;
-import daml_stdlib_da_time_types.da.time.types.RelTime;
-import io.opentelemetry.api.trace.Span;
-import io.opentelemetry.context.Context;
-import io.opentelemetry.instrumentation.annotations.SpanAttribute;
 import io.opentelemetry.instrumentation.annotations.WithSpan;
-import org.openapitools.model.LicenseExpireRequest;
-import org.openapitools.model.LicenseRenewRequest;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.RequestMapping;
-import quickstart_licensing.licensing.license.License;
-import quickstart_licensing.licensing.license.License.License_Expire;
-import quickstart_licensing.licensing.license.License.License_Renew;
-import quickstart_licensing.licensing.license.LicenseRenewalRequest;
-import quickstart_licensing.licensing.license.LicenseRenewalRequest.LicenseRenewalRequest_CompleteRenewal;
-import quickstart_licensing.licensing.util.Metadata;
-import splice_amulet.splice.amuletrules.AppTransferContext;
-import splice_wallet_payments.splice.wallet.payment.AcceptedAppPayment;
 
 import java.time.Duration;
-import java.time.OffsetDateTime;
-import java.time.ZoneOffset;
+import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
-import static com.digitalasset.quickstart.utility.ContextAwareCompletableFutures.completeWithin;
-import static com.digitalasset.quickstart.utility.ContextAwareCompletableFutures.supplyWithin;
+import org.openapitools.model.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.RequestMapping;
+import quickstart_licensing.licensing.license.License.License_Expire;
+import quickstart_licensing.licensing.license.License.License_Renew;
+import quickstart_licensing.licensing.license.LicenseRenewalRequest.LicenseRenewalRequest_CompleteRenewal;
+import splice_api_token_holding_v1.splice.api.token.holdingv1.InstrumentId;
+import splice_api_token_metadata_v1.splice.api.token.metadatav1.AnyValue;
+import splice_api_token_metadata_v1.splice.api.token.metadatav1.ChoiceContext;
+import splice_api_token_metadata_v1.splice.api.token.metadatav1.ExtraArgs;
 
 /**
- * License management service for handling contract-based operations on Licenses.
+ * Management service for handling contract-based operations on Licenses.
  */
 @Controller
 @RequestMapping("${openapi.asset.base-path:}")
@@ -62,19 +55,19 @@ public class LicenseApiImpl implements LicensesApi {
 
     private final LedgerApi ledger;
     private final DamlRepository damlRepository;
-    private final AuthenticatedPartyProvider authenticatedPartyProvider;
-    private final ScanProxy scanProxyService;
+    private final TokenStandardProxy tokenStandardProxy;
+    private final AuthUtils auth;
 
     public LicenseApiImpl(
             LedgerApi ledger,
             DamlRepository damlRepository,
-            AuthenticatedPartyProvider authenticatedPartyProvider,
-            ScanProxy scanProxyService
+            TokenStandardProxy tokenStandardProxy,
+            AuthUtils authUtils
     ) {
         this.ledger = ledger;
         this.damlRepository = damlRepository;
-        this.authenticatedPartyProvider = authenticatedPartyProvider;
-        this.scanProxyService = scanProxyService;
+        this.tokenStandardProxy = tokenStandardProxy;
+        this.auth = authUtils;
     }
 
     /**
@@ -82,468 +75,194 @@ public class LicenseApiImpl implements LicensesApi {
      */
     @Override
     @WithSpan
-    public CompletableFuture<ResponseEntity<List<org.openapitools.model.License>>> listLicenses() {
-        Span methodSpan = Span.current();
-        Context parentContext = Context.current();
-        Map<String, Object> startAttributes = Map.of("templateId", License.TEMPLATE_ID.qualifiedName());
-
-        LoggingSpanHelper.addEventWithAttributes(methodSpan, "listLicenses: start", startAttributes);
-        LoggingSpanHelper.setSpanAttributes(methodSpan, startAttributes);
-
-        return CompletableFuture.completedFuture(authenticatedPartyProvider.getPartyOrFail())
-                .thenCompose(party ->
-                        CompletableFuture
-                                .supplyAsync(
-                                        supplyWithin(parentContext, () -> fetchLicensesAndRenewals(party, methodSpan))
-                                )
-                                .thenCompose(cf -> cf)
-                                .thenApply(ResponseEntity::ok)
-                )
-                .whenComplete(
-                        completeWithin(parentContext, (res, ex) -> {
-                            if (ex == null) {
-                                int count = (res.getBody() != null) ? res.getBody().size() : 0;
-                                LoggingSpanHelper.logDebug(logger, "listLicenses: success", Map.of("count", count));
-                            } else {
-                                LoggingSpanHelper.logError(logger, "listLicenses: failed", startAttributes, ex);
-                                LoggingSpanHelper.recordException(methodSpan, ex);
-                            }
-                        })
-                );
-    }
-
-    private CompletableFuture<List<org.openapitools.model.License>> fetchLicensesAndRenewals(
-            String party,
-            Span span
-    ) {
-        LoggingSpanHelper.addEventWithAttributes(span, "Fetching licenses and renewal requests", Map.of("party", party));
-
-        return damlRepository.findActiveLicensesByParty(party)
-                .thenCompose(licenseContracts ->
-                        damlRepository.findActiveLicenseRenewalRequestsByParty(party)
-                                .thenApply(renewalRecords ->
-                                        buildLicenseList(licenseContracts, renewalRecords)
-                                )
-                );
-    }
-
-    private static record RenewalKey(String dso, String provider, String user, int licenseNum) {}
-
-    /**
-     * Builds a list of License objects by associating each license contract with its matching renewals.
-     */
-    private List<org.openapitools.model.License> buildLicenseList(
-            List<Contract<License>> licenseContracts,
-            List<LicenseRenewalRequestData> renewalContracts
-    ) {
-        Map<RenewalKey, List<LicenseRenewalRequestData>> groupedRenewals =
-                renewalContracts.stream().collect(
-                        Collectors.groupingBy(rcData ->
-                                new RenewalKey(
-                                        rcData.contract().payload.getDso.getParty,
-                                        rcData.contract().payload.getProvider.getParty,
-                                        rcData.contract().payload.getUser.getParty,
-                                        rcData.contract().payload.getLicenseNum.intValue()
-                                )
-                        )
-                );
-
-        return licenseContracts.stream()
-                .map(contract -> {
-                    org.openapitools.model.License apiLicense = new org.openapitools.model.License();
-                    apiLicense.setContractId(contract.contractId.getContractId);
-                    apiLicense.setDso(contract.payload.getDso.getParty);
-                    apiLicense.setProvider(contract.payload.getProvider.getParty);
-                    apiLicense.setUser(contract.payload.getUser.getParty);
-
-                    org.openapitools.model.LicenseParams lp = new org.openapitools.model.LicenseParams();
-                    org.openapitools.model.Metadata meta = new org.openapitools.model.Metadata();
-                    meta.setData(contract.payload.getParams.getMeta.getValues);
-                    lp.setMeta(meta);
-                    apiLicense.setParams(lp);
-
-                    apiLicense.setExpiresAt(
-                            OffsetDateTime.ofInstant(contract.payload.getExpiresAt, ZoneOffset.UTC)
-                    );
-                    apiLicense.setLicenseNum(contract.payload.getLicenseNum.intValue());
-
-                    RenewalKey key = new RenewalKey(
-                            contract.payload.getDso.getParty,
-                            contract.payload.getProvider.getParty,
-                            contract.payload.getUser.getParty,
-                            contract.payload.getLicenseNum.intValue()
-                    );
-
-                    List<LicenseRenewalRequestData> matchedRenewals =
-                            groupedRenewals.getOrDefault(key, Collections.emptyList());
-
-                    List<org.openapitools.model.LicenseRenewalRequest> apiRenewals =
-                            matchedRenewals.stream()
-                                    .map(rcData -> {
-                                        Contract<LicenseRenewalRequest> rc = rcData.contract();
-                                        org.openapitools.model.LicenseRenewalRequest r =
-                                                new org.openapitools.model.LicenseRenewalRequest();
-                                        r.setContractId(rc.contractId.getContractId);
-                                        r.setProvider(rc.payload.getProvider.getParty);
-                                        r.setUser(rc.payload.getUser.getParty);
-                                        r.setDso(rc.payload.getDso.getParty);
-                                        r.setLicenseNum(rc.payload.getLicenseNum.intValue());
-                                        r.setLicenseFeeCc(rc.payload.getLicenseFeeCc);
-                                        r.setIsPaid(rcData.isPaid());
-
-                                        long micros = rc.payload.getLicenseExtensionDuration.getMicroseconds;
-                                        String approximateDays = (micros / 1_000_000 / 3600 / 24) + " days";
-                                        r.setLicenseExtensionDuration(approximateDays);
-                                        r.setReference(rc.payload.getReference.getContractId);
-                                        return r;
-                                    })
-                                    .collect(Collectors.toList());
-
-                    apiLicense.setRenewalRequests(apiRenewals);
-                    return apiLicense;
-                })
-                .collect(Collectors.toList());
+    public CompletableFuture<ResponseEntity<List<License>>> listLicenses() {
+        var ctx = tracingCtx(logger, "listLicenses");
+        return auth.asAuthenticatedParty(party -> traceServiceCallAsync(ctx, () ->
+                damlRepository.findActiveLicenses(party).thenApply(res -> res.stream()
+                        .map(LicenseApiImpl::toLicenseApi)
+                        .sorted(Comparator.comparing(License::getUser).thenComparingInt(License::getLicenseNum))
+                        .toList()
+                ).thenApply(ResponseEntity::ok)
+        ));
     }
 
     @Override
     @WithSpan
     public CompletableFuture<ResponseEntity<Void>> renewLicense(
-            @SpanAttribute("license.contractId") String contractId,
-            @SpanAttribute("license.commandId") String commandId,
-            LicenseRenewRequest licenseRenewRequest
-    ) {
-        Span methodSpan = Span.current();
-        Context parentContext = Context.current();
-
-        Map<String, Object> attributes = Map.of(
-                "license.contractId", contractId,
-                "license.commandId", commandId,
-                "templateId", License.TEMPLATE_ID.qualifiedName(),
-                "choiceName", "License_Renew"
-        );
-        LoggingSpanHelper.addEventWithAttributes(methodSpan, "renewLicense: start", attributes);
-        LoggingSpanHelper.setSpanAttributes(methodSpan, attributes);
-
-        return CompletableFuture.completedFuture(authenticatedPartyProvider.getPartyOrFail())
-                .thenCompose(providerParty ->
-                        CompletableFuture.supplyAsync(
-                                supplyWithin(parentContext, () ->
-                                        exerciseLicenseRenewChoice(providerParty, contractId, commandId, licenseRenewRequest, attributes, methodSpan)
-                                )
-                        ).thenCompose(cf -> cf)
-                )
-                .whenComplete(
-                        completeWithin(parentContext, (res, ex) -> {
-                            if (ex == null) {
-                                LoggingSpanHelper.logDebug(logger, "renewLicense: success", attributes);
-                            } else {
-                                LoggingSpanHelper.logError(logger, "renewLicense: failed", attributes, ex);
-                                LoggingSpanHelper.recordException(methodSpan, ex);
-                            }
-                        })
-                );
-    }
-
-    private CompletableFuture<ResponseEntity<Void>> exerciseLicenseRenewChoice(
-            String providerParty,
             String contractId,
             String commandId,
-            LicenseRenewRequest licenseRenewRequest,
-            Map<String, Object> attributes,
-            Span span
+            LicenseRenewRequest request
     ) {
-        LoggingSpanHelper.addEventWithAttributes(span, "Exercising License_Renew", attributes);
-
-        return damlRepository.findLicenseById(contractId)
-                .thenCompose(contract -> {
-                    Duration extDuration = Duration.parse(licenseRenewRequest.getLicenseExtensionDuration());
-                    long extensionMicros = extDuration.toNanos() / 1_000;
-                    RelTime licenseExtensionDuration = new RelTime(extensionMicros);
-
-                    Duration payDuration = Duration.parse(licenseRenewRequest.getPaymentAcceptanceDuration());
-                    long payDurationMicros = payDuration.toNanos() / 1_000;
-                    RelTime paymentAcceptanceDuration = new RelTime(payDurationMicros);
-
-                    License_Renew choice = new License_Renew(
-                            licenseRenewRequest.getLicenseFeeCc(),
-                            licenseExtensionDuration,
-                            paymentAcceptanceDuration,
-                            licenseRenewRequest.getDescription()
-                    );
-
-                    return ledger.exerciseAndGetResult(
-                            providerParty,
-                            contract.contractId,
-                            choice,
-                            commandId
-                    ).thenApply(result -> {
-                        Map<String, Object> successAttributes = new HashMap<>(attributes);
-                        successAttributes.put("renewalRequestCid", result.get_1.getContractId);
-                        successAttributes.put("paymentRequestCid", result.get_2.getContractId);
-
-                        LoggingSpanHelper.logInfo(logger, "License renewal request succeeded", successAttributes);
-                        return ResponseEntity.ok().<Void>build();
-                    });
-                });
+        var ctx = tracingCtx(logger, "renewLicense",
+                "contractId", contractId,
+                "commandId", commandId
+        );
+        return auth.asAdminParty(party -> traceServiceCallAsync(ctx, () -> {
+            var registryAdminIdFut = tokenStandardProxy.getRegistryAdminId();
+            var licenseFut = damlRepository.findLicenseById(contractId);
+            return registryAdminIdFut.thenCombine(licenseFut, (adminId, license) -> {
+                var now = Instant.now();
+                License_Renew choice = new License_Renew(
+                        UUID.randomUUID().toString(),
+                        new InstrumentId(new Party(adminId), "Amulet"),
+                        request.getLicenseFeeCc(),
+                        parseRelTime(request.getLicenseExtensionDuration()),
+                        now,
+                        now.plus(Duration.parse(request.getPrepareUntilDuration())),
+                        now.plus(Duration.parse(request.getSettleBeforeDuration())),
+                        request.getDescription()
+                );
+                return ledger.exerciseAndGetResult(license.contractId, choice, commandId)
+                        .thenApply(r -> ResponseEntity.ok().<Void>build());
+            }).thenCompose(x -> x);
+        }));
     }
+
 
     @Override
     @WithSpan
-    public CompletableFuture<ResponseEntity<Void>> completeLicenseRenewal(
-            @SpanAttribute("licenseRenewal.contractId") String renewalRequestId,
-            @SpanAttribute("licenseRenewal.commandId") String commandId
+    public CompletableFuture<ResponseEntity<LicenseRenewalResult>> completeLicenseRenewal(
+            String contractId,
+            String commandId,
+            CompleteLicenseRenewalRequest request
     ) {
-        Span methodSpan = Span.current();
-        Context parentContext = Context.current();
-
-        Map<String, Object> initialAttrs = Map.of(
-                "renewalRequestId", renewalRequestId,
+        var ctx = tracingCtx(logger, "completeLicenseRenewal",
+                "contractId", contractId,
                 "commandId", commandId
         );
-        LoggingSpanHelper.addEventWithAttributes(methodSpan, "completeLicenseRenewal: start", initialAttrs);
-        LoggingSpanHelper.logInfo(logger, "completeLicenseRenewal: received request", initialAttrs);
-
-        return CompletableFuture.completedFuture(authenticatedPartyProvider.getPartyOrFail())
-                .thenCompose(actingParty ->
-                        damlRepository.findLicenseRenewalRequestById(renewalRequestId)
-                                .thenCompose(lrrContract -> {
-                                    if (lrrContract == null) {
-                                        LoggingSpanHelper.logError(logger, "No LicenseRenewalRequest found", initialAttrs, null);
-                                        return CompletableFuture.completedFuture(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
-                                    }
-                                    return processLicenseRenewal(actingParty, commandId, lrrContract, initialAttrs, methodSpan);
-                                })
-                )
-                .whenComplete(
-                        completeWithin(parentContext, (res, ex) -> {
-                            if (ex == null) {
-                                LoggingSpanHelper.logDebug(logger, "completeLicenseRenewal: success", initialAttrs);
-                            } else {
-                                LoggingSpanHelper.logError(logger, "completeLicenseRenewal: failed", initialAttrs, ex);
-                                LoggingSpanHelper.recordException(methodSpan, ex);
-                            }
-                        })
+        return auth.asAdminParty(party -> traceServiceCallAsync(ctx, () -> {
+            var choiceContextFut = tokenStandardProxy.getAllocationTransferContext(request.getAllocationContractId());
+            var renewalFut = damlRepository.findActiveLicenseRenewalRequestById(request.getRenewalRequestContractId());
+            return choiceContextFut.thenCombine(renewalFut, (c, r) -> {
+                var choiceContext = ensurePresent(c, "Transfer context not found for allocation {}", request.getAllocationContractId());
+                var renewal = ensurePresent(r, "Active renewal request not found for contract {}", request.getRenewalRequestContractId());
+                TransferContext transferContext = prepareTransferContext(
+                        choiceContext.getDisclosedContracts(),
+                        Map.of(
+                                "AmuletRules", "amulet-rules",
+                                "OpenMiningRound", "open-round"
+                        )
                 );
+                LicenseRenewalRequest_CompleteRenewal choice = new LicenseRenewalRequest_CompleteRenewal(
+                        new ContractId<>(request.getAllocationContractId()),
+                        new ContractId<>(contractId),
+                        transferContext.extraArgs
+                );
+                return ledger.exerciseAndGetResult(renewal.contractId, choice, commandId, transferContext.disclosedContracts)
+                        .thenApply(newLicenseCid -> {
+                            logger.info("newLicenseContractId: {}", newLicenseCid.getContractId);
+                            LicenseRenewalResult result = new LicenseRenewalResult();
+                            result.setLicenseId(newLicenseCid.getContractId);
+                            return ResponseEntity.ok(result);
+                        });
+            }).thenCompose(x -> x);
+        }));
     }
 
-    private CompletableFuture<ResponseEntity<Void>> processLicenseRenewal(
-            String actingParty,
-            String commandId,
-            Contract<LicenseRenewalRequest> lrrContract,
-            Map<String, Object> initialAttrs,
-            Span span
-    ) {
-        String user = lrrContract.payload.getUser.getParty;
-        String provider = lrrContract.payload.getProvider.getParty;
-        String dso = lrrContract.payload.getDso.getParty;
-        Long licenseNum = lrrContract.payload.getLicenseNum;
-        String referenceCid = lrrContract.payload.getReference.getContractId;
-
-        return damlRepository.findSingleActiveAcceptedAppPayment(referenceCid, user, provider)
-                .thenCompose(maybeAcceptedPayment -> {
-                    if (maybeAcceptedPayment.isEmpty()) {
-                        LoggingSpanHelper.logError(logger, "No AcceptedAppPayment found", initialAttrs, null);
-                        return CompletableFuture.completedFuture(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
-                    }
-                    return handleAcceptedAppPayment(actingParty, commandId, lrrContract, maybeAcceptedPayment.get(), dso, licenseNum, initialAttrs, span);
-                });
-    }
-
-    private CompletableFuture<ResponseEntity<Void>> handleAcceptedAppPayment(
-            String actingParty,
-            String commandId,
-            Contract<LicenseRenewalRequest> lrrContract,
-            Contract<AcceptedAppPayment> acceptedPayment,
-            String dso,
-            Long licenseNum,
-            Map<String, Object> initialAttrs,
-            Span span
-    ) {
-        ContractId<AcceptedAppPayment> acceptedPaymentCid = acceptedPayment.contractId;
-        Long miningRound = acceptedPayment.payload.getRound.getNumber;
-
-        return damlRepository.findSingleActiveLicense(
-                lrrContract.payload.getUser.getParty,
-                lrrContract.payload.getProvider.getParty,
-                licenseNum,
-                dso
-        ).thenCompose(maybeLicense -> {
-            if (maybeLicense.isEmpty()) {
-                LoggingSpanHelper.logError(logger, "No matching License found", initialAttrs, null);
-                return CompletableFuture.completedFuture(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
-            }
-            return finalizeLicenseRenewal(
-                    actingParty,
-                    commandId,
-                    lrrContract,
-                    maybeLicense.get(),
-                    acceptedPaymentCid,
-                    miningRound,
-                    initialAttrs,
-                    span
-            );
-        });
-    }
-
-    private CompletableFuture<ResponseEntity<Void>> finalizeLicenseRenewal(
-            String actingParty,
-            String commandId,
-            Contract<LicenseRenewalRequest> lrrContract,
-            Contract<License> licenseContract,
-            ContractId<AcceptedAppPayment> acceptedPaymentCid,
-            Long miningRound,
-            Map<String, Object> initialAttrs,
-            Span span
-    ) {
-        CompletableFuture<CommandsOuterClass.DisclosedContract> amuletRulesFut = fetchAmuletRulesDisclosedContract();
-        CompletableFuture<CommandsOuterClass.DisclosedContract> openMiningRoundFut =
-                fetchOpenMiningRoundDisclosedContract(miningRound);
-
-        return CompletableFuture.allOf(amuletRulesFut, openMiningRoundFut).thenCompose(ignored -> {
-            CommandsOuterClass.DisclosedContract amuletRulesDc = amuletRulesFut.join();
-            CommandsOuterClass.DisclosedContract openMiningRoundDc = openMiningRoundFut.join();
-
-            AppTransferContext transferContext = new AppTransferContext(
-                    new ContractId<>(amuletRulesDc.getContractId()),
-                    new ContractId<>(openMiningRoundDc.getContractId()),
-                    Optional.empty()
-            );
-
-            LicenseRenewalRequest_CompleteRenewal choice = new LicenseRenewalRequest_CompleteRenewal(
-                    acceptedPaymentCid,
-                    licenseContract.contractId,
-                    transferContext
-            );
-
-            return ledger.exerciseAndGetResult(
-                    actingParty,
-                    lrrContract.contractId,
-                    choice,
-                    commandId,
-                    List.of(amuletRulesDc, openMiningRoundDc)
-            ).thenApply(newLicenseCid -> {
-                Map<String, Object> successAttrs = new HashMap<>(initialAttrs);
-                successAttrs.put("newLicenseContractId", newLicenseCid.getContractId);
-                LoggingSpanHelper.logInfo(logger, "completeLicenseRenewal: License renewed", successAttrs);
-                return ResponseEntity.ok().<Void>build();
-            });
-        });
-    }
-
-    /**
-     * Expires a License contract by exercising the 'License_Expire' choice.
-     */
     @Override
     @WithSpan
     public CompletableFuture<ResponseEntity<String>> expireLicense(
-            @SpanAttribute("contractId") String contractId,
-            @SpanAttribute("commandId") String commandId,
-            LicenseExpireRequest licenseExpireRequest
-    ) {
-        Span methodSpan = Span.current();
-        Context parentContext = Context.current();
-
-        Map<String, Object> attributes = Map.of(
-                "contractId", contractId,
-                "commandId", commandId,
-                "templateId", License.TEMPLATE_ID.qualifiedName(),
-                "choiceName", "License_Expire"
-        );
-        LoggingSpanHelper.addEventWithAttributes(methodSpan, "expireLicense: start", attributes);
-        LoggingSpanHelper.setSpanAttributes(methodSpan, attributes);
-        LoggingSpanHelper.logInfo(logger, "expireLicense: received request", attributes);
-
-        return CompletableFuture.completedFuture(authenticatedPartyProvider.getPartyOrFail())
-                .thenCompose(actingParty ->
-                        CompletableFuture.supplyAsync(
-                                supplyWithin(parentContext, () ->
-                                        exerciseLicenseExpireChoice(actingParty, contractId, commandId, licenseExpireRequest, attributes, methodSpan)
-                                )
-                        ).thenCompose(cf -> cf)
-                )
-                .whenComplete(
-                        completeWithin(parentContext, (res, ex) -> {
-                            if (ex == null) {
-                                LoggingSpanHelper.logDebug(logger, "expireLicense: success", attributes);
-                            } else {
-                                LoggingSpanHelper.logError(logger, "expireLicense: failed", attributes, ex);
-                                LoggingSpanHelper.recordException(methodSpan, ex);
-                            }
-                        })
-                );
-    }
-
-    private CompletableFuture<ResponseEntity<String>> exerciseLicenseExpireChoice(
-            String actingParty,
             String contractId,
             String commandId,
-            LicenseExpireRequest licenseExpireRequest,
-            Map<String, Object> attributes,
-            Span span
+            LicenseExpireRequest licenseExpireRequest
     ) {
-        LoggingSpanHelper.addEventWithAttributes(span, "Exercising License_Expire", attributes);
-
-        return damlRepository.findLicenseById(contractId)
-                .thenCompose(contract -> {
-                    Metadata meta = new Metadata(licenseExpireRequest.getMeta().getData());
-                    License_Expire choice = new License_Expire(new Party(actingParty), meta);
-
-                    return ledger.exerciseAndGetResult(actingParty, contract.contractId, choice, commandId)
-                            .thenApply(result -> {
-                                LoggingSpanHelper.logInfo(logger, "License expired successfully", attributes);
-                                return ResponseEntity.ok("License expired successfully");
-                            });
-                });
+        var ctx = tracingCtx(logger, "expireLicense",
+                "contractId", contractId,
+                "commandId", commandId
+        );
+        return auth.asAuthenticatedParty(party -> traceServiceCallAsync(ctx, () ->
+                damlRepository.findLicenseById(contractId).thenCompose(contract -> {
+                    var license = ensurePresent(Optional.ofNullable(contract), "License not found for contract {}", contractId);
+                    var meta = licenseExpireRequest.getMeta().getData();
+                    if (!party.equals(auth.getAppProviderPartyId())) {
+                        meta = new HashMap<>(meta);
+                        meta.put("Note", "Triggered by user request");
+                    }
+                    License_Expire choice = new License_Expire(new Party(auth.getAppProviderPartyId()), toTokenStandarMetadata(meta));
+                    return ledger.exerciseAndGetResult(license.contractId, choice, commandId)
+                            .thenApply(result -> ResponseEntity.ok("License expired successfully"));
+                })
+        ));
     }
 
-    private CompletableFuture<CommandsOuterClass.DisclosedContract> fetchAmuletRulesDisclosedContract() {
-        return scanProxyService.getAmuletRules().thenApply(resp ->
-                buildDisclosedContractFromApi(
-                        resp.getAmuletRules().getContract().getTemplateId(),
-                        resp.getAmuletRules().getContract().getContractId(),
-                        resp.getAmuletRules().getContract().getCreatedEventBlob()
-                )
+    private static License toLicenseApi(DamlRepository.LicenseWithRenewalRequests licenseContract) {
+        var lp = licenseContract.license().payload;
+        var now = Instant.now();
+        License licenseApi = new License();
+        licenseApi.setContractId(licenseContract.license().contractId.getContractId);
+        licenseApi.setProvider(lp.getProvider.getParty);
+        licenseApi.setUser(lp.getUser.getParty);
+        licenseApi.setIsExpired(!lp.getExpiresAt.isAfter(now));
+        var metaApi = new Metadata();
+        var paramsApi = new LicenseParams();
+        licenseApi.setParams(paramsApi.meta(metaApi.data(lp.getParams.getMeta.getValues)));
+        licenseApi.setExpiresAt(toOffsetDateTime(lp.getExpiresAt));
+        licenseApi.setLicenseNum(lp.getLicenseNum.intValue());
+        var renewalsApi = licenseContract.renewals().stream().map(renewalContract ->
+                toLicenseRenewalRequestAPI(renewalContract, now)
+        ).sorted(Comparator.comparing(LicenseRenewalRequest::getRequestedAt)).toList();
+        licenseApi.setRenewalRequests(renewalsApi);
+        return licenseApi;
+    }
+
+    private static LicenseRenewalRequest toLicenseRenewalRequestAPI(DamlRepository.LicenseRenewalRequestWithAllocationCid renewalContract, Instant now) {
+        var rp = renewalContract.renewal().payload;
+        var renewalApi = new LicenseRenewalRequest();
+        renewalApi.setContractId(renewalContract.renewal().contractId.getContractId);
+        renewalApi.setProvider(rp.getProvider.getParty);
+        renewalApi.setUser(rp.getUser.getParty);
+        renewalApi.setLicenseNum(rp.getLicenseNum.intValue());
+        renewalApi.setLicenseFeeAmount(rp.getLicenseFeeAmount);
+        renewalApi.setDescription(rp.getDescription);
+        renewalApi.setPrepareUntil(toOffsetDateTime(rp.getPrepareUntil));
+        renewalApi.setSettleBefore(toOffsetDateTime(rp.getSettleBefore));
+        renewalApi.setRequestedAt(toOffsetDateTime(rp.getRequestedAt));
+        renewalApi.setRequestId(rp.getRequestId);
+        long micros = rp.getLicenseExtensionDuration.getMicroseconds;
+        String approximateDays = (micros / 1_000_000 / 3600 / 24) + " days";
+        renewalApi.setLicenseExtensionDuration(approximateDays);
+        renewalApi.setPrepareDeadlinePassed(!rp.getPrepareUntil.isAfter(now));
+        renewalApi.setSettleDeadlinePassed(!rp.getSettleBefore.isAfter(now));
+        if (renewalContract.allocationCid().isPresent()) {
+            renewalApi.setAllocationCid(renewalContract.allocationCid().get().getContractId);
+        }
+        return renewalApi;
+    }
+
+    private record TransferContext(ExtraArgs extraArgs, List<CommandsOuterClass.DisclosedContract> disclosedContracts) {
+    }
+
+    private TransferContext prepareTransferContext(
+            List<DisclosedContract> disclosedContracts,
+            Map<String, String> metaMap) {
+        var disclosures = disclosedContracts
+                .stream()
+                .map(this::toLedgerApiDisclosedContract)
+                .toList();
+        Map<String, AnyValue> choiceContextMap = disclosures
+                .stream()
+                .map(dc -> {
+                    var metaKey = metaMap.get(dc.getTemplateId().getEntityName());
+                    if (metaKey != null) {
+                        return Map.entry(metaKey, toAnyValueContractId(dc.getContractId()));
+                    } else {
+                        return null;
+                    }
+                })
+                .filter(Objects::nonNull)
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+        return new TransferContext(
+                new ExtraArgs(new ChoiceContext(choiceContextMap), toTokenStandarMetadata(Map.of())),
+                disclosures
         );
     }
 
-    private CompletableFuture<CommandsOuterClass.DisclosedContract> fetchOpenMiningRoundDisclosedContract(Long roundNumber) {
-        return scanProxyService.getOpenAndIssuingMiningRounds().thenCompose(resp -> {
-            if (resp.getOpenMiningRounds().isEmpty()) {
-                return CompletableFuture.failedFuture(new RuntimeException("No open mining rounds found"));
-            }
-            var maybeContract = resp.getOpenMiningRounds().stream()
-                    .filter(round -> Long.valueOf(round.getContract().getPayload().getRound().getNumber())
-                            .equals(roundNumber))
-                    .findFirst();
-            if (maybeContract.isEmpty()) {
-                return CompletableFuture.failedFuture(
-                        new IllegalStateException("No open mining round found with number: " + roundNumber)
-                );
-            }
-            var contract = maybeContract.get().getContract();
-            return CompletableFuture.completedFuture(
-                    buildDisclosedContractFromApi(
-                            contract.getTemplateId(),
-                            contract.getContractId(),
-                            contract.getCreatedEventBlob()
-                    )
-            );
-        });
-    }
+    private CommandsOuterClass.DisclosedContract toLedgerApiDisclosedContract(DisclosedContract dc) {
+        ValueOuterClass.Identifier templateId = parseTemplateIdentifier(dc.getTemplateId());
+        byte[] blob = Base64.getDecoder().decode(dc.getCreatedEventBlob());
 
-    private CommandsOuterClass.DisclosedContract buildDisclosedContractFromApi(
-            String templateIdStr,
-            String contractId,
-            String createdEventBlobBase64
-    ) {
-        ValueOuterClass.Identifier templateId = parseTemplateIdentifier(templateIdStr);
-        byte[] blob = Base64.getDecoder().decode(createdEventBlobBase64);
-
-        return CommandsOuterClass.DisclosedContract.newBuilder()
-                .setTemplateId(templateId)
-                .setContractId(contractId)
-                .setCreatedEventBlob(ByteString.copyFrom(blob))
-                .build();
+        return CommandsOuterClass.DisclosedContract.newBuilder().setTemplateId(templateId).setContractId(dc.getContractId())
+                .setCreatedEventBlob(ByteString.copyFrom(blob)).build();
     }
 
     private static ValueOuterClass.Identifier parseTemplateIdentifier(String templateIdStr) {
@@ -562,10 +281,15 @@ public class LicenseApiImpl implements LicensesApi {
         }
         String entityName = entityNameBuilder.toString();
 
-        return ValueOuterClass.Identifier.newBuilder()
-                .setPackageId(packageId)
-                .setModuleName(moduleName)
-                .setEntityName(entityName)
-                .build();
+        return ValueOuterClass.Identifier.newBuilder().setPackageId(packageId).setModuleName(moduleName)
+                .setEntityName(entityName).build();
+    }
+
+    private static AnyValue toAnyValueContractId(String contractId) {
+        return new AnyValue.AnyValue_AV_ContractId(new ContractId<>(contractId));
+    }
+
+    private static splice_api_token_metadata_v1.splice.api.token.metadatav1.Metadata toTokenStandarMetadata(Map<String, String> meta) {
+        return new splice_api_token_metadata_v1.splice.api.token.metadatav1.Metadata(meta);
     }
 }
